# libkafka-asio

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  ReferenceTests.runsettings  appveyor.yml  boostdep.cpp  buildsubmodule.cmake
cmake/Modules/: FindSnappy.cmake
examples/: CMakeLists.txt  README.md  fetch.cpp  metadata.cpp  offset.cpp  offset_fetch.cpp  produce.cpp
examples/cpp03/: CMakeLists.txt
examples/cpp11/: CMakeLists.txt  produce.cpp
lib/libkafka_asio/: connection_configuration.h  error.h  message.h  metadata_response.h  offset_response.h  primitives.h  produce_response.h  response.h
lib/libkafka_asio/detail/: basic_connection.h  compression.h  compression_gz.h  compression_snappy.h  connection_service.h  endian.h  recursive_messageset_iterator.h  response_read.h  topics_partitions.h  weak_impl_handler.h
lib/libkafka_asio/detail/impl/: compression.h  compression_gz.h  compression_snappy.h  connection_service.h  consumer_metadata_response_read.h  fetch_request_write.h  fetch_response_read.h  message_read.h  message_write.h  metadata_request_write.h  metadata_response_read.h  offset_commit_request_write.h  offset_commit_response_read.h  offset_fetch_request_write.h  offset_fetch_response_read.h  offset_request_write.h  offset_response_read.h  produce_request_write.h  produce_response_read.h  response_read.h
lib/libkafka_asio/impl/: connection_configuration.h  message.h  offset_fetch_request.h  produce_request.h
test/: CMakeLists.txt
test/src/: StreamTest.h  connection_configuration_test.cpp  error_test.cpp  fetch_request_test.cpp  libkafka_asio_test.cpp  message_test.cpp  metadata_response_test.cpp
test/src/detail/: compression_gz_test.cpp  compression_snappy_test.cpp  consumer_metadata_request_write_test.cpp  fetch_request_write_test.cpp  fetch_response_iterator_test.cpp  functional_test.cpp  metadata_request_write_test.cpp  offset_commit_request_write_test.cpp  offset_fetch_request_write_test.cpp  offset_request_write_test.cpp  produce_request_write_test.cpp  recursive_messageset_iterator_test.cpp  request_write_test.cpp  response_read_test.cpp
